--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,13 @@
 	"printWidth": 120,
 	"useTabs": true,
 	"singleAttributePerLine": true,
-	"importOrder": ["^@core/(.*)$", "<THIRD_PARTY_MODULES>", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+	"importOrder": [
+		"^@core/(.*)$",
+		"<THIRD_PARTY_MODULES>",
+		"^@server/(.*)$",
+		"^@/constants/(.*)$",
+		"^@ui/(.*)$",
+		"^[./]"
+	],
 	"plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
