--- a/package.json
+++ b/package.json
@@ -6,25 +6,34 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prisma:seed": "prisma db seed"
 	},
 	"dependencies": {
 		"@mantine/core": "^7.11.2",
 		"@mantine/form": "^7.11.2",
 		"@mantine/hooks": "^7.11.2",
+		"@prisma/client": "5.16.1",
 		"clsx": "^2.1.1",
 		"hugeicons-react": "^0.3.0",
+		"lodash": "^4.17.21",
 		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18"
 	},
+	"prisma": {
+		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
-		"@types/node": "^20",
+		"@types/lodash": "^4.17.7",
+		"@types/node": "^20.14.12",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.5",
-		"typescript": "^5"
+		"prisma": "^5.17.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4"
 	}
 }
