--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@mantine/form": "^7.11.2",
 		"@mantine/hooks": "^7.11.2",
 		"@prisma/client": "5.16.1",
+		"@tanstack/react-query": "^5.51.21",
+		"axios": "^1.7.3",
 		"clsx": "^2.1.1",
 		"hugeicons-react": "^0.3.0",
 		"lodash": "^4.17.21",
