add filter store

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 POSTGRES_PRISMA_URL="postgres://default:qBZ1h8pwdzaS@ep-misty-bonus-a25zyytb-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NON_POOLING="postgres://default:qBZ1h8pwdzaS@ep-misty-bonus-a25zyytb.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
 NEXT_API_URL="http://localhost:4444/api"
+NEXT_PUBLIC_API_URL="http://localhost:4444/api"
