--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@tanstack/react-query": "^5.51.21",
 		"axios": "^1.7.3",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.3.27",
 		"hugeicons-react": "^0.3.0",
 		"lodash": "^4.17.21",
 		"next": "14.2.5",
