--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@mantine/form": "^7.11.2",
 		"@mantine/hooks": "^7.11.2",
 		"@prisma/client": "5.16.1",
+		"@siberiacancode/reactuse": "^0.0.65",
 		"@tanstack/react-query": "^5.51.21",
 		"axios": "^1.7.3",
 		"clsx": "^2.1.1",
