--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"framer-motion": "^11.3.27",
 		"hugeicons-react": "^0.3.0",
 		"lodash": "^4.17.21",
+		"motion-number": "^0.1.6",
 		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18",
